Sun Aug 31 17:58:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (Logging.log_open): opens in binary mode to get rid of
	  extra CR.

	* lib/mkmf.rb (try_func, try_var, have_struct_member),
	  (scalar_ptr_type?, scalar_type?): use MAIN_DOES_NOTHING.

	* lib/mkmf.rb (MAIN_DOES_NOTHING): defaults to ordinary main.

	* win32/Makefile.sub (config): for MAIN_DOES_NOTHING for wince.

Sun Aug 31 17:30:35 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/README (How to run): added.

Sun Aug 31 17:28:25 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec (config): added.
	
	* spec/default.mspec (target): replaced the built ruby 
	  to runruby.rb. 
	  Improved $LOAD_PATH on running specs.

	* spec/default.mspec (flags): ditto.

Sun Aug 31 17:16:07 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (make_econv_exception): rename instance variable names
	  for storing encoding names.
	  (ecerr_source_encoding_name): method renamed.
	  (ecerr_destination_encoding_name): ditto.

Sun Aug 31 16:57:36 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_putback): associate encoding to the result.

Sun Aug 31 16:43:56 2008  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/intern.h: rename RB_UBF_DFL to
	  RUBY_UBF_IO and RUBY_UBF_PROCESS.
	  Because there is no default (universal) unblocking function.

	* ext/socket/socket.c, file.c, io.c, process.c, thread.c: ditto.

Sun Aug 31 16:42:23 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_insert_output): raise ArgumentError on failure.

Sun Aug 31 16:39:17 2008  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_thread.rb: add a test.

Sun Aug 31 16:34:41 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/single_byte.trans (us_ascii_map): don't define 8bit bytes.

Sun Aug 31 14:27:27 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_last_error): new method.

Sun Aug 31 14:17:34 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_primitive_convert): make two arguments,